# eztrans-sys

./: Cargo.toml  readme.md
src/: error.rs  ez_ffi.rs  eztranslib.rs  lib.rs  main.rs
